simplified naming for Zone and Service & also migrated pg-go to pgx for Zone
